# true_anagrams

./: .gitignore  LICENSE.md  README.md  pyproject.toml
anagrams/: __main__.py
anagrams/modules/: anagrams.py  dictionnaries.py  dictonnaries.py  loadings.py  ui.py
data/arch/: fr_no-accents.txt
data/dictionaries/: default  default_prepared  equalized  fr_no-diac_22k.txt
data/dictionnaries/: fr_no-accents.txt
src/anagrams/: __main__.py
src/anagrams/modules/: art.py  dictionaries.py  files.py  loadings.py  paths.py  sorting.py  ui.py
src/true_anagrams_detroix23/: __init__.py  __main__.py
src/true_anagrams_detroix23.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/true_anagrams_detroix23/anagrams/: __init__.py  base.py
src/true_anagrams_detroix23/compatibility/: plateform.py  settings.py  types.py
src/true_anagrams_detroix23/debug/: benchmark.py  logs.py  tests.py
src/true_anagrams_detroix23/dictionaries/: all_words.py  base.py
src/true_anagrams_detroix23/modules/: all_words.py  anagrams.py  art.py  dictionaries.py  loadings.py  paths.py  permutations.py  preparations.py  sorting.py  tests.py  ui.py
src/true_anagrams_detroix23/ui/: __init__.py  base.py  cli.py  help.py  interaction.py  loadings.py  ui.py
true_anagrams_detroix23.egg-info/: SOURCES.txt
