[project]
name = "true_anagrams_detroix23"
version = "1.0.0"
description = "Find anagrams, and if they exist in the dictionary."
authors = [
    { name="Detroix23", email="detroix23@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = []

license = "CC-BY-4.0"
license-files = [
    "LICENSE.md"
]

[project.urls]
Repository = "https://github.com/Detroix23"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
